# virtual-plc

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE-MIT  README.md  audit.toml  deny.toml  docker-compose.yml  release.toml
.github/workflows/: ci.yml  release.yml
config/: default.toml  ethercat-example.toml  modbus-example.toml  simulated-example.toml
crates/plc-common/: Cargo.toml
crates/plc-common/src/: config.rs  error.rs  iec_types.rs  lib.rs  metrics.rs  state.rs  time.rs
crates/plc-compiler/: Cargo.toml
crates/plc-compiler/fuzz/: Cargo.toml  README.md
crates/plc-compiler/fuzz/corpus/fuzz_compile/: blink.st  pid_control.st
crates/plc-compiler/fuzz/corpus/fuzz_lex/: time.txt
crates/plc-compiler/fuzz/corpus/fuzz_parse/: control.st  minimal.st  types.st
crates/plc-compiler/fuzz/fuzz_targets/: fuzz_compile.rs  fuzz_lex.rs  fuzz_parse.rs
crates/plc-compiler/src/: codegen.rs  ir.rs  lib.rs  typechecker.rs
crates/plc-compiler/src/frontend/: ast.rs  lexer.rs  mod.rs  parser.rs  st.pest
crates/plc-compiler/tests/: integration_tests.rs
crates/plc-daemon/: Cargo.toml
crates/plc-daemon/src/: diagnostics.rs  main.rs  signals.rs
crates/plc-fieldbus/: Cargo.toml  README.md
crates/plc-fieldbus/src/: dc_sync.rs  ethercat.rs  lib.rs  modbus.rs  slave_config.rs
crates/plc-fieldbus/tests/: ethercat_integration.rs  mock_modbus_server.rs  modbus_integration.rs
crates/plc-runtime/: Cargo.toml
crates/plc-runtime/src/: fault_recorder.rs  io_image.rs  lib.rs  realtime.rs  scheduler.rs  wasm_host.rs  wasm_imports.rs  wasm_memory.rs  watchdog.rs
crates/plc-stdlib/: Cargo.toml
crates/plc-stdlib/src/: bistable.rs  counters.rs  lib.rs  timers.rs  triggers.rs
crates/plc-web-ui/: Cargo.toml
crates/plc-web-ui/src/: api.rs  dashboard.rs  lib.rs  metrics.rs  state.rs  websocket.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: acceptance-criteria.md  architecture.md  fieldbus-setup.md  getting-started.md  process-image-abi.md
docs/adr/: 001-runtime-arch.md  002-wasm-sandbox.md  003-ethercat-primary.md
docs/security/: threat-model.md
examples/: README.md  motor_control.st  state_machine.st
packaging/systemd/: plc-daemon.service
scripts/: demo.sh  host_tune.md  install.sh  security-audit.sh  uninstall.sh  verify_latency.sh
tests/: acceptance_tests.rs
tests/acceptance/: common.rs  latency_test.rs  mod.rs  soak_test.rs  watchdog_test.rs
vscode-vplc/: .vscodeignore  README.md  language-configuration.json  package.json
vscode-vplc/syntaxes/: st.tmLanguage.json
