[package]
name = "plc-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
pest.workspace = true
pest_derive.workspace = true
wasm-encoder.workspace = true
plc-common = { path = "../plc-common" }

[dev-dependencies]
wasmparser.workspace = true
