[package]
name = "plc-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IEC 61131-3 Structured Text to WebAssembly compiler for Virtual PLC"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
pest.workspace = true
pest_derive.workspace = true
wasm-encoder.workspace = true
plc-common = { path = "../plc-common" }

[dev-dependencies]
wasmparser.workspace = true
