[package]
name = "plc-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Virtual PLC daemon - production-grade soft PLC runtime with CLI interface"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
toml.workspace = true
humantime.workspace = true
libc.workspace = true
plc-common = { path = "../plc-common", version = "0.1.0" }
plc-runtime = { path = "../plc-runtime", version = "0.1.0" }
plc-fieldbus = { path = "../plc-fieldbus", version = "0.1.0" }
plc-compiler = { path = "../plc-compiler", version = "0.1.0" }
plc-web-ui = { path = "../plc-web-ui", version = "0.1.0" }
wat = "1.0"
wasmprinter = "0.2"
