[package]
name = "plc-fieldbus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
plc-common = { path = "../plc-common" }

# For raw socket access on Linux
[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true
nix.workspace = true

[features]
default = ["simulated"]
# Enable simulated fieldbus for testing without hardware
simulated = []
# Enable SOEM FFI bindings (requires libsoem-dev installed)
soem-ffi = []
