[package]
name = "plc-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
libc.workspace = true
nix.workspace = true
crossbeam-utils.workspace = true
wasmtime.workspace = true
wat.workspace = true
plc-common = { path = "../plc-common" }
