[package]
name = "plc-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Real-time WebAssembly execution engine for Virtual PLC - cyclic scheduler, I/O image, and Wasmtime host"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
libc.workspace = true
nix.workspace = true
crossbeam-utils.workspace = true
wasmtime.workspace = true
wat.workspace = true
static_assertions = "1.1"
plc-common = { path = "../plc-common" }

[lints.rust]
# Allow unsafe for real-time glue code (mlockall, sched_setaffinity, etc.)
unsafe_code = "warn"
