[package]
name = "plc-web-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web interface for Virtual PLC - REST API, WebSocket monitoring, and metrics"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
plc-common = { path = "../plc-common" }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# WebSocket support
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Metrics
prometheus = { version = "0.13", default-features = false }
