[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Development automation tasks for Virtual PLC workspace"
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
